compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__case__alternative_pattern_variable_rewriting.snap
---
source: compiler-core/src/fsharp/tests/case.rs
assertion_line: 20
expression: "\npub fn myfun(mt) {\n  case mt {\n    1 | _ ->\n      1\n      |> Ok\n  }\n  1\n  |> Ok\n}\n"
---
module rec my.``mod``
let myfun (mt: int): Result<int, 'u15> = begin
    match mt with
    | 1 | _ ->
        begin
            let _pipe = 1
            (Ok (_pipe))
        end
    begin
        let _pipe = 1
        (Ok (_pipe))
    end
end
