compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__case__nested_list_pattern.snap
---
source: compiler-core/src/fsharp/tests/case.rs
expression: "\nfn match_sequences(\n  sequences: List(List(a))\n) {\n  case sequences {\n    [] -> []\n    [sequence] -> [sequence]\n    [ascending1, ascending2, ..rest] -> []\n  }\n}\n"
---
module rec my.``mod``
let private match_sequences (sequences: list<list<'t8>>) = begin
    match sequences with
    | [] ->
        []
    | [sequence] ->
        [sequence]
    | ascending1::ascending2::rest ->
        []
end
