compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__case__not_two.snap
---
source: compiler-core/src/fsharp/tests/case.rs
expression: "pub fn foo(x, y) {\n  case x {\n    _ if !y && !x -> 0\n    _ -> 1\n  }\n}\n"
---
module rec my.``mod``
let foo (x: bool) (y: bool) = begin
    match x with
    | _ when not y && not x ->
        0
    | _ ->
        1
end
