compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__case__spread_empty_list.snap
---
source: compiler-core/src/fsharp/tests/case.rs
expression: "\npub fn foo() {\n  case [] {\n    [..] -> 1\n  }\n}\n"
---
module rec my.``mod``
let foo (): int = begin
    match [] with
    | []::_ ->
        1
end
