compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__case__spread_empty_list_assigning.snap
---
source: compiler-core/src/fsharp/tests/case.rs
expression: "\npub fn foo() {\n  case [] {\n    [..rest] -> rest\n  }\n}\n"
---
module rec my.``mod``

let foo () = begin
    match [] with
    | []::rest ->
        rest
end
